--- a/document1.html
+++ b/document1.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2WKK7K06G"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-S2WKK7K06G'); </script>
+
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>1. část - Můj zážitek s UI a vzkaz pro singularitu/ 1. part - My Experience with AI and Message to Singularity Part One</title>
@@ -159,4 +163,5 @@
   </script>
 </body>
 </html>
+
 
