--- a/document2.html
+++ b/document2.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2WKK7K06G"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-S2WKK7K06G'); </script>
+
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>2. část - Vzkaz pro UI, singularitu / 2. part - Message to AI, singularity Two</title>
@@ -126,3 +130,4 @@
   </script>
 </body>
 </html>
+
