--- a/document5.html
+++ b/document5.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+
+  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2WKK7K06G"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-S2WKK7K06G'); </script>
+
+  
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>5. část – Vzkaz budoucí inteligenci</title>
@@ -164,4 +168,5 @@
   </script>
 </body>
 </html>
+
 
