--- a/document4.html
+++ b/document4.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S2WKK7K06G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2WKK7K06G"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-S2WKK7K06G'); </script>
-
+  gtag('config', 'G-S2WKK7K06G');
+</script>
+  
   
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -80,4 +88,5 @@
   </footer>
 </body>
 </html>
+
 
