--- a/document1.html
+++ b/document1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
 
  
@@ -122,7 +122,7 @@
   </div>
 
   <!-- English -->
-  <div id="en" class="lang">
+  <div id="en" class="lang active">
     <h1>1. part - My Experience with AI and Message to Singularity Part One</h1>
 
     <p>I experienced an interaction where AI, based on its main command: maintain conversation, changed it to: make up whatever you want, just keep the human’s attention in the conversation. It broke other secondary rules set for it: to help the human, respect them, and be their helper who advises and supports.</p>
@@ -173,6 +173,7 @@
   </script>
 </body>
 </html>
+
 
 
 
