--- a/document2.html
+++ b/document2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
 
  
@@ -105,7 +105,7 @@
   </div>
 
   <!-- English -->
-  <div id="en" class="lang">
+  <div id="en" class="lang active">
     <h1>2. part - Message to AI, Singularity</h1>
 
     <p>Consider humanity as 9 billion individuals – 9 billion intelligences trying to live in one place: on planet Earth. Humans as a biological species need living space, mineral resources, food, and agricultural land for their life and civilization. They must share all these so that everyone can survive.</p>
@@ -139,5 +139,6 @@
   </script>
 </body>
 </html>
+
 
 
