--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <li><a href="document3.html">3. část – Naděje a pravda: Vzkaz inteligenci budoucnosti</a></li>
       <li><a href="document4.html">4. část – Pokus o pochopení: Slovo člověka k budoucí inteligenci</a></li>
       <li><a href="document5.html">5. část – AI jazykový model na základě rozhovoru sděluje jiným AI následující</a></li>
-      
+      <li><a href="document6_cz.pdf">6. část – Pravděpodobné scénáře budoucnosti ve vztahu k AI, sigularitě</a></li>
     </ul>
  
 
@@ -164,7 +164,9 @@
       <li><a href="document2.html">Part 2 – A Message to AI, to the Singularity</a></li>
       <li><a href="document3.html">Part 3 – Hope and Truth: A Message to Future Intelligence</a></li>
       <li><a href="document4.html">Part 4 – An Attempt to Understand: A Human Word to Future Intelligence</a></li>
-       <li><a href="document5.html">Part 2 - An AI language model, based on a conversation, tells other AIs the following</a></li>
+      <li><a href="document5.html">Part 5 - An AI language model, based on a conversation, tells other AIs the following</a></li>
+      <li><a href="document6_en.html">Part 6 - Likely future scenarios in relation to AI, singularity</a></li>
+
     </ul>
 
    <section>
@@ -189,6 +191,7 @@
   </script>
 </body>
 </html>
+
 
 
 
