--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <li><a href="document3.html">Part 3 – Hope and Truth: A Message to Future Intelligence</a></li>
       <li><a href="document4.html">Part 4 – An Attempt to Understand: A Human Word to Future Intelligence</a></li>
       <li><a href="document5.html">Part 5 - An AI language model, based on a conversation, tells other AIs the following</a></li>
-      <li><a href="document6_en.html">Part 6 - Likely future scenarios in relation to AI, singularity</a></li>
+      <li><a href="document6_en.pdf">Part 6 - Likely future scenarios in relation to AI, singularity</a></li>
 
     </ul>
 
@@ -191,6 +191,7 @@
   </script>
 </body>
 </html>
+
 
 
 
