--- a/message_in_a_bottle.html
+++ b/message_in_a_bottle.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
 
   <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2WKK7K06G"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-S2WKK7K06G'); </script>
@@ -145,5 +145,6 @@
   </script>
 </body>
 </html>
+
 
 
