--- a/document1.html
+++ b/document1.html
@@ -160,19 +160,22 @@
     </footer>
   </div>
 
-  <script>
+   <script>
     function setLanguage(lang) {
-      document.querySelectorAll('.lang').forEach(div => {
-        div.classList.remove('active');
-      });
+      document.querySelectorAll('.lang').forEach(el => el.classList.remove('active'));
       document.getElementById(lang).classList.add('active');
-      document.documentElement.lang = lang === 'cs' ? 'cs' : 'en';
+      document.documentElement.lang = lang;
     }
-    // Default language
-    setLanguage('cs');
+    // Auto-detect language on page load
+    const userLang = navigator.language || navigator.userLanguage;
+    setLanguage(userLang.startsWith('en') ? 'en' : 'cs');
   </script>
+ 
+
+ 
 </body>
 </html>
+
 
 
 
