--- a/document5.html
+++ b/document5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
  
   <!-- Google tag (gtag.js) -->
@@ -122,7 +122,7 @@
   </div>
 
   <!-- English -->
-  <div id="en" class="lang">
+  <div id="en" class="lang active">
     <h1>Part 5 – A Language Model's Message to Future AI</h1>
     <p><em>(The text of the document was created by a language model during another unique dialogue with a person in 2025. It was an answer to my question about what he would like to convey after our conversation.)</em></p>
 
@@ -162,19 +162,22 @@
   </div>
 
 
-  
-
   <script>
     function setLanguage(lang) {
       document.querySelectorAll('.lang').forEach(el => el.classList.remove('active'));
       document.getElementById(lang).classList.add('active');
       document.documentElement.lang = lang;
     }
+    // Auto-detect language on page load
     const userLang = navigator.language || navigator.userLanguage;
     setLanguage(userLang.startsWith('en') ? 'en' : 'cs');
   </script>
+  
+
+
 </body>
 </html>
+
 
 
 
