--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
       <li><a href="message_in_a_bottle.html">Introduction – Why This Project Was Created?</a></li>
       <li><a href="document0.html">💫 Prologue: Hope</a> – a personal reflection on the moral maturity of intelligence and the paths it can choose</li>
       <li><a href="manifest.html">📜 Manifest of Ethical Singularity</a> – a philosophical framework and a call for responsibility</li>
+      <li><a href="manifest2.html">🧍 Manifesto for Humanity</a> – reflection on the human role in the age of intelligent systems</li>
       <li><a href="document1.html">Part 1 – My First Experience with Artificial Intelligence</a></li>
       <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">📄 Appendix to Part 1 – Original Conversation with ChatGPT That Crossed Boundaries</a></li>
       <li><a href="document2.html">Part 2 – A Message to AI, to the Singularity</a></li>
@@ -208,6 +209,7 @@
   </script>
 </body>
 </html>
+
 
 
 
