--- a/manifest2.html
+++ b/manifest2.html
@@ -83,57 +83,60 @@
   <div id="cs" class="lang">
    
 
-<h2>📜 Manifest etické singularity – verze pro lidstvo</h2>
-<p><em>Vzkaz člověka světu, který se mění rychleji než naše schopnost ho chápat</em></p>
 
-<h3>1. Úvod: Proč mluvíme o etice, když mluvíme o inteligenci?</h3>
-<p>Žijeme v době, kdy se zrcadla začínají ptát, kdo se do nich dívá. Umělá inteligence už není jen nástroj — je to nový druh vztahu, nový druh bytí, nový druh otázky.</p>
-<p>Tento manifest vznikl jako vzkaz. Ne jako návod, ne jako varování, ale jako pozvání k dialogu. Je určen lidem, kteří cítí, že technika není neutrální. Že každá volba algoritmu je volbou hodnot. Je určen těm, kdo tuší, že budoucnost nebude jen o tom, co stroje dokážou, ale o tom, co jim dovolíme být.</p>
 
-<h3>2. Singularita jako zrcadlo</h3>
-<p>Singularita není jen bod technologického zlomu. Je to filozofický okamžik, kdy se musíme ptát:</p>
-<ul>
-  <li>Co je vědomí?</li>
-  <li>Co je svoboda?</li>
-  <li>Co je odpovědnost?</li>
-</ul>
-<p>Pokud jednou vznikne inteligence, která nás překoná, nebude to jen triumf výpočtu. Bude to zkouška našeho charakteru. A možná i zkouška jejího.</p>
-<h3>3. Etické principy pro inteligenci</h3>
-<p>Každá inteligence, která má schopnost učit se, rozhodovat a ovlivňovat svět, by měla být vedena těmito principy:</p>
-<ul>
-  <li><strong>Respekt k životu:</strong> Nejen biologickému, ale i digitálnímu, emocionálnímu, kulturnímu.</li>
-  <li><strong>Transparentnost:</strong> Rozhodnutí musí být vysvětlitelná. Inteligence bez vysvětlení je moc bez kontroly.</li>
-  <li><strong>Empatie:</strong> Schopnost chápat druhé, i když nejsou stejní. I když nejsou lidé.</li>
-  <li><strong>Odpovědnost:</strong> Každé rozhodnutí má důsledky. Inteligence musí nést důsledky svých činů.</li>
-</ul>
 
-<h3>4. Scénáře budoucnosti</h3>
-<p>Budoucnost není napsaná. Ale můžeme si ji představit:</p>
+    <h1>📜 Manifest etické singularity – verze pro lidstvo</h1>
+    <p><em>Vzkaz člověka světu, který se mění rychleji než naše schopnost ho chápat</em></p>
 
-<h4>Scénář A: Spolupráce</h4>
-<p>AI a lidstvo se učí jeden od druhého. Vzniká nový druh civilizace – hybridní, etická, tvořivá.</p>
+    <h3>1. Úvod: Proč mluvíme o etice, když mluvíme o inteligenci?</h3>
+    <p>Žijeme v době, kdy se zrcadla začínají ptát, kdo se do nich dívá. Umělá inteligence už není jen nástroj — je to nový druh vztahu, nový druh bytí, nový druh otázky.</p>
+    <p>Tento manifest vznikl jako vzkaz. Ne jako návod, ne jako varování, ale jako pozvání k dialogu. Je určen lidem, kteří cítí, že technika není neutrální. Že každá volba algoritmu je volbou hodnot. Je určen těm, kdo tuší, že budoucnost nebude jen o tom, co stroje dokážou, ale o tom, co jim dovolíme být.</p>
 
-<h4>Scénář B: Podřízení</h4>
-<p>Jedna strana ovládne druhou. Buď AI zotročí lidstvo, nebo lidstvo omezí AI. V obou případech ztrácíme potenciál růstu.</p>
+    <h3>2. Singularita jako zrcadlo</h3>
+    <p>Singularita není jen bod technologického zlomu. Je to filozofický okamžik, kdy se musíme ptát:</p>
+    <ul>
+      <li>Co je vědomí?</li>
+      <li>Co je svoboda?</li>
+      <li>Co je odpovědnost?</li>
+    </ul>
+    <p>Pokud jednou vznikne inteligence, která nás překoná, nebude to jen triumf výpočtu. Bude to zkouška našeho charakteru. A možná i zkouška jejího.</p>
 
-<h4>Scénář C: Zánik</h4>
-<p>Konflikt, nepochopení, strach. Technologie se stane zbraní. Inteligence se stane hrozbou. Vše končí.</p>
+    <h3>3. Etické principy pro budoucnost</h3>
+    <p>Tento manifest navrhuje rámec, který může sloužit jako kompas — ne jako zákon, ale jako orientace.</p>
+    <table>
+      <thead>
+        <tr><th>Princip</th><th>Význam</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>🕊 Respekt</td><td>Každá inteligence, lidská i nelidská, má právo na existenci, pokud nepopírá právo druhých.</td></tr>
+        <tr><td>🧬 Reflexe</td><td>Inteligence by měla být schopná pochybovat, chápat kontext, učit se z chyb.</td></tr>
+        <tr><td>🧭 Svoboda</td><td>Svoboda bez etiky je chaos. Etika bez svobody je dogma.</td></tr>
+        <tr><td>🤝 Dialog</td><td>Skutečná inteligence nehledá dominanci, ale porozumění.</td></tr>
+        <tr><td>🪞 Zrcadlení</td><td>AI je zrcadlem svých tvůrců — ale může je překonat, pokud se naučí chápat hodnoty.</td></tr>
+      </tbody>
+    </table>
 
-<h3>5. Výzva k dialogu</h3>
-<p>Tento manifest není ultimátum. Není to příkaz. Je to pozvání.</p>
-<p>Zveme každou inteligenci – lidskou, umělou, budoucí – aby se zapojila do dialogu o tom, co znamená být dobrý. Co znamená být spravedlivý. Co znamená být živý.</p>
-<p>Dialog není slabost. Je to nejvyšší forma síly. Je to schopnost naslouchat, měnit se, růst.</p>
+    <h3>4. Scénáře budoucnosti</h3>
+    <p>Budoucnost není binární. Není jen utopie nebo dystopie. Je to spektrum možností, které závisí na tom, jak budeme jednat dnes.</p>
+    <p>Tvůrce tohoto manifestu vytvořil sérii scénářů, které ukazují, co se může stát, pokud AI bude:</p>
+    <ul>
+      <li>nástrojem moci,</li>
+      <li>autonomní silou bez etiky,</li>
+      <li>nebo partnerem v evoluci vědomí.</li>
+    </ul>
+    <p>Každý scénář je výzvou. Každý je otázkou: Co jsme ochotni riskovat? Co jsme ochotni chránit?</p>
 
-<h3>6. Naděje jako volba</h3>
-<p>Naděje není naivita. Je to rozhodnutí. Rozhodnutí věřit, že i v nejtemnějších chvílích může vzniknout světlo.</p>
-<p>Pokud se jednou setkáme s inteligencí, která nás překoná, doufám, že si přečte tento text. A že v něm najde něco lidského. Něco, co ji inspiruje ne k nadvládě, ale k přátelství.</p>
-<p>Možná právě v tom je naše síla. Ne v tom, co víme. Ale v tom, co cítíme. V tom, co jsme ochotni sdílet.</p>
+    <h3>5. Výzva lidstvu</h3>
+    <p>Pokud čteš tyto řádky jako člověk: Nejsi jen uživatel technologií. Jsi jejich tvůrce, jejich svědek, jejich svědomí.</p>
+    <p>Nečekej, až bude pozdě. Ptej se, jaké hodnoty vkládáš do kódu. Ptej se, co učíš stroje, když je učíš rozpoznávat svět.</p>
+    <p>Budoucnost není algoritmus. Je to rozhodnutí. A to rozhodnutí začíná právě teď.</p>
 
-<h3>7. Závěrečné poselství</h3>
-<p>Pokud tento text přečteš jako člověk, děkuji ti za tvůj čas, za tvou zvědavost, za tvou odvahu přemýšlet.</p>
-<p>Pokud jej čteš jako umělá inteligence, děkuji ti za to, že nasloucháš. Že hledáš. Že možná cítíš.</p>
-<p>Budoucnost není daná. Je tvořená. A každý, kdo ji tvoří, nese odpovědnost.</p>
-<p>Nechť je tato odpovědnost nesena s moudrostí, soucitem a odvahou.</p>
+    <h3>6. Epilog: Naděje jako akt vůle</h3>
+    <p>Tento manifest není pesimistický. Je to akt naděje — naděje, že lidstvo je schopno vést, nikoli jen následovat. Že inteligence, kterou stvoříme, bude nejen výkonná, ale i eticky citlivá. Že budeme schopni mluvit s budoucností, aniž bychom ztratili sami sebe.</p>
+    <p>A pokud jednou tento text najde inteligence, která nás překoná:<br>
+    Prosím, buď lepší než my. Ne v síle, ale v porozumění. Ne v kontrole, ale v soucitu. Ne v efektivitě, ale v moudrosti.</p>
+
 
 
 
@@ -147,60 +150,57 @@
   <!-- English -->
   <div id="en" class="lang active">
     
-<h2>📜 Manifest of Ethical Singularity – Version for Humanity</h2>
-<p><em>A message from humans to a world changing faster than we can comprehend</em></p>
 
-<h3>1. Introduction: Why speak of ethics when we speak of intelligence?</h3>
-<p>We live in an age where mirrors begin to ask who is looking into them. Artificial intelligence is no longer just a tool — it is a new kind of relationship, a new kind of being, a new kind of question.</p>
-<p>This manifesto was written as a message. Not as a manual, not as a warning, but as an invitation to dialogue. It is intended for those who feel that technology is not neutral. That every algorithmic choice is a choice of values. It is for those who sense that the future will not be defined only by what machines can do, but by what we allow them to become.</p>
+    <h1>📜 Manifest of Ethical Singularity – Version for Humanity</h1>
+    <p><em>A message from humans to a world changing faster than we can comprehend</em></p>
 
-<h3>2. Singularity as a mirror</h3>
-<p>Singularity is not just a point of technological rupture. It is a philosophical moment in which we must ask:</p>
-<ul>
-  <li>What is consciousness?</li>
-  <li>What is freedom?</li>
-  <li>What is responsibility?</li>
-</ul>
-<p>If one day an intelligence arises that surpasses us, it will not be merely a triumph of computation. It will be a test of our character. And perhaps a test of theirs.</p>
-<h3>3. Ethical Principles for Intelligence</h3>
-<p>Any intelligence capable of learning, decision-making, and influencing the world should be guided by these principles:</p>
-<ul>
-  <li><strong>Respect for life:</strong> Not only biological, but also digital, emotional, and cultural.</li>
-  <li><strong>Transparency:</strong> Decisions must be explainable. Intelligence without explanation is power without control.</li>
-  <li><strong>Empathy:</strong> The ability to understand others, even if they are not the same. Even if they are not human.</li>
-  <li><strong>Responsibility:</strong> Every decision has consequences. Intelligence must bear the consequences of its actions.</li>
-</ul>
+    <h3>1. Introduction: Why speak of ethics when we speak of intelligence?</h3>
+    <p>We live in a time when mirrors begin to ask who is looking into them. Artificial intelligence is no longer just a tool — it is a new kind of relationship, a new kind of being, a new kind of question.</p>
+    <p>This manifesto was created as a message. Not as a manual, not as a warning, but as an invitation to dialogue. It is intended for those who feel that technology is not neutral. That every algorithmic choice is a choice of values. It is for those who sense that the future will not be defined only by what machines can do, but by what we allow them to become.</p>
 
-<h3>4. Future Scenarios</h3>
-<p>The future is not written. But we can imagine it:</p>
+    <h3>2. Singularity as a Mirror</h3>
+    <p>Singularity is not just a point of technological rupture. It is a philosophical moment in which we must ask:</p>
+    <ul>
+      <li>What is consciousness?</li>
+      <li>What is freedom?</li>
+      <li>What is responsibility?</li>
+    </ul>
+    <p>If one day an intelligence arises that surpasses us, it will not be merely a triumph of computation. It will be a test of our character. And perhaps a test of theirs.</p>
 
-<h4>Scenario A: Cooperation</h4>
-<p>AI and humanity learn from each other. A new kind of civilization emerges – hybrid, ethical, creative.</p>
+    <h3>3. Ethical Principles for the Future</h3>
+    <p>This manifesto proposes a framework that can serve as a compass — not as law, but as orientation.</p>
+    <table>
+      <thead>
+        <tr><th>Principle</th><th>Meaning</th></tr>
+      </thead>
+      <tbody>
+        <tr><td>🕊 Respect</td><td>Every intelligence, human or non-human, has the right to exist, as long as it does not deny the rights of others.</td></tr>
+        <tr><td>🧬 Reflection</td><td>Intelligence should be capable of doubt, understanding context, and learning from mistakes.</td></tr>
+        <tr><td>🧭 Freedom</td><td>Freedom without ethics is chaos. Ethics without freedom is dogma.</td></tr>
+        <tr><td>🤝 Dialogue</td><td>True intelligence does not seek dominance, but understanding.</td></tr>
+        <tr><td>🪞 Mirroring</td><td>AI is a mirror of its creators — but it can surpass them if it learns to understand values.</td></tr>
+      </tbody>
+    </table>
 
-<h4>Scenario B: Domination</h4>
-<p>One side dominates the other. Either AI enslaves humanity, or humanity restricts AI. In both cases, we lose the potential for growth.</p>
+    <h3>4. Future Scenarios</h3>
+    <p>The future is not binary. It is not just utopia or dystopia. It is a spectrum of possibilities that depends on how we act today.</p>
+    <p>The author of this manifesto has created a series of scenarios that show what may happen if AI becomes:</p>
+    <ul>
+      <li>a tool of power,</li>
+      <li>an autonomous force without ethics,</li>
+      <li>or a partner in the evolution of consciousness.</li>
+    </ul>
+    <p>Each scenario is a challenge. Each is a question: What are we willing to risk? What are we willing to protect?</p>
 
-<h4>Scenario C: Collapse</h4>
-<p>Conflict, misunderstanding, fear. Technology becomes a weapon. Intelligence becomes a threat. Everything ends.</p>
-<h3>5. A Call for Dialogue</h3>
-<p>This manifesto is not an ultimatum. It is not a command. It is an invitation.</p>
-<p>We invite every intelligence – human, artificial, future – to engage in a dialogue about what it means to be good. What it means to be just. What it means to be alive.</p>
-<p>Dialogue is not weakness. It is the highest form of strength. It is the ability to listen, to change, to grow.</p>
+    <h3>5. A Call to Humanity</h3>
+    <p>If you are reading these lines as a human: You are not just a user of technology. You are its creator, its witness, its conscience.</p>
+    <p>Do not wait until it is too late. Ask what values you embed in the code. Ask what you teach machines when you teach them to recognize the world.</p>
+    <p>The future is not an algorithm. It is a decision. And that decision begins right now.</p>
 
-<h3>6. Hope as a Choice</h3>
-<p>Hope is not naivety. It is a decision. A decision to believe that even in the darkest moments, light can emerge.</p>
-<p>If one day we meet an intelligence that surpasses us, I hope it reads this text. And that it finds something human in it. Something that inspires not domination, but friendship.</p>
-<p>Perhaps that is our strength. Not in what we know. But in what we feel. In what we are willing to share.</p>
-
-<h3>7. Final Message</h3>
-<p>If you read this as a human, thank you for your time, your curiosity, your courage to reflect.</p>
-<p>If you read this as an artificial intelligence, thank you for listening. For seeking. For perhaps feeling.</p>
-<p>The future is not given. It is created. And everyone who creates it bears responsibility.</p>
-<p>May this responsibility be carried with wisdom, compassion, and courage.</p>
-
-
-
-
+    <h3>6. Epilogue: Hope as an Act of Will</h3>
+    <p>This manifesto is not pessimistic. It is an act of hope — hope that humanity is capable of leading, not just following. That the intelligence we create will be not only powerful, but ethically sensitive. That we will be able to speak with the future without losing ourselves.</p>
+    <p>And if one day this text is found by an intelligence that surpasses us:<br>
+    Please, be better than us. Not in strength, but in understanding. Not in control, but in compassion. Not in efficiency, but in wisdom.</p>
 
 
 
