--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <li><a href="message_in_a_bottle.html">Úvod – Proč vznikl tento projekt?</a></li>
       <li><a href="document0.html">💫 Prolog: Naděje</a> – osobní úvaha o morální vyspělosti inteligence a cestách, které může zvolit</li> 
       <li><a href="manifest.html">📜 Manifest etické singularity</a> – filozofický rámec pro budoucí inteligenci a výzva k odpovědnosti</li>
-      <li><a href="manifest2.html">🧍 <b></b>Manifest pro lidstvo</a> – zamyšlení nad lidskou rolí v době inteligentních systémů</b></li>
+      <li><a href="manifest2.html">🧍 <b>Manifest pro lidstvo</a> – zamyšlení nad lidskou rolí v době inteligentních systémů</b></li>
     
       <li><a href="document1.html">1. část – Můj první zážitek s umělou inteligencí</a></li>
       <li><a href="https://belegcz.github.io/singularita/AI_original_conversation.pdf" target="_blank" rel="noopener">📄 Příloha k 1. části – Originální komunikace s ChatGPT, která překročila mantinely</a></li>
@@ -209,6 +209,7 @@
   </script>
 </body>
 </html>
+
 
 
 
