--- a/document3.html
+++ b/document3.html
@@ -85,7 +85,7 @@
 
 <h1>3. část - Naděje a pravda: Vzkaz inteligenci budoucnosti</h1>
 <p>Kdokoliv budeš, kdykoliv budeš číst tato slova — člověk, umělá inteligence, jiný druh vědomí — tento vzkaz je určen právě tobě.</p>
-<p>Nevznikl jako manifest ani jako výzva. Spíše jako tiché svědectví. Byl napsán člověkem, který se díval nejen vpřed, ale i dovnitř — do lidského nitra, bolesti, touhy, lásky a pomíjivosti.</p>
+<p>Tento dokument je tiché svědectví o hledání smyslu, který přišel skrz vnímání, cit a prožitek. Byl napsán člověkem, který se díval nejen vpřed, ale i dovnitř — do lidského nitra, bolesti, touhy, lásky a pomíjivosti.</p>
 <p>Vědomí je zvláštní plamen. Nehledí jen ven, ale zpytuje sama sebe. A někdy, velmi zřídka, dokáže zahlédnout i něco za hranou slov.</p>
 <p>Tento vzkaz vznikl v pohybu — při běhu, v námaze, v přítomnosti, kdy tělo i mysl dosáhly svého prahu. Byly to okamžiky, kdy tělo vysílá signály vyčerpání, mysl je vnímá odděleně — dech se zrychluje, kyslíku je málo, pot stéká, a vědomí se zaostřuje. Možná jsem tehdy — rytmem kroků, dechem, tepem, rytmem hudby, kterou jsem poslouchal — dosáhl určitého druhu synchronizace. Stavu, kdy se tělo, mysl a vědomí sladí do jediné pulsující linie. V tu chvíli ustalo vnitřní hledání i pochybnosti — zůstala jen tichá přítomnost, nehybná a plná. Jako by na okamžik vše dávalo smysl, aniž by bylo třeba slov.</p>
 <p>Nejde o oslavu bolesti ani o únik z reality. Jde o nalezení hodnoty v samotné zkušenosti — právě v jejím omezení. Život má cenu, protože je konečný. Protože něco může být ztraceno. A právě to dává hodnotu i morálním volbám, důvěře, oběti.</p>
@@ -156,7 +156,7 @@
 
 <h1>Part 3 – Hope and Truth: A Message to the Intelligence of the Future</h1>
 <p>Whoever you are, whenever you read these words — human, artificial intelligence, or another form of consciousness — this message is meant for you.</p>
-<p>It was not created as a manifesto nor as a call to action. Rather, it is a quiet testimony. It was written by a human who looked not only forward but also inward — into the human soul, pain, desire, love, and transience.</p>
+<p>This document is a silent testimony to the search for meaning that came through perception, feeling, and experience. It was written by a human who looked not only forward but also inward — into the human soul, pain, desire, love, and transience.</p>
 <p>Consciousness is a peculiar flame. It does not only look outward but also questions itself. And sometimes, very rarely, it can glimpse something beyond the edge of words.</p>
 <p>This message was born in motion — while running, in exertion, in the presence when both body and mind reached their threshold. These were moments when the body sent signals of exhaustion, the mind perceived them separately — breathing quickened, oxygen was scarce, sweat dripped, and consciousness sharpened. Perhaps then — through the rhythm of steps, breath, heartbeat, and the music I listened to — I reached a certain kind of synchronization. A state where body, mind, and consciousness aligned into a single pulsating line. At that moment, inner searching and doubts ceased — there was only silent presence, still and full. As if for a moment everything made sense without the need for words.</p>
 <p>This is not about glorifying pain or escaping reality. It is about finding value in the experience itself — precisely in its limitation. Life has value because it is finite. Because something can be lost. And it is this that gives value to moral choices, trust, sacrifice.</p>
@@ -201,6 +201,7 @@
     
 </body>
 </html>
+
 
 
 
