--- a/document7.html
+++ b/document7.html
@@ -11,16 +11,33 @@
   gtag('config', 'G-S2WKK7K06G');
 </script>
 
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Technological Rise, Moral Fall – Reflection on the Fate of Humanity</title>
-  <meta name="description" content="A philosophical reflection on technology, morality, and the future of humanity in the age of artificial intelligence." />
-  <meta name="keywords" content="technology, morality, AI, ethics, singularity, philosophy, future, humanity" />
-  <meta property="og:title" content="Technological Rise, Moral Fall – Reflection on the Fate of Humanity" />
-  <meta property="og:description" content="Exploring the risks of technological progress without moral growth and the role of individuals in shaping the future." />
-  <meta property="og:locale" content="en_US" />
+<!-- Language and character encoding -->
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta http-equiv="Content-Language" content="en" />
 
+<!-- SEO metadata -->
+<title>Technological Rise, Moral Fall – A Reflection on Humanity and AI</title>
+<meta name="description" content="A philosophical reflection on technology, morality, and the fate of humanity in the age of artificial intelligence and the singularity." />
+<meta name="keywords" content="artificial intelligence, singularity, technology, morality, ethics, philosophy, humanity, future" />
+<meta name="author" content="belegcz" />
+<meta name="robots" content="index, follow" />
+
+<!-- Open Graph (for social media sharing) -->
+<meta property="og:title" content="Technological Rise, Moral Fall – A Reflection on Humanity and AI" />
+<meta property="og:description" content="Exploring the risks of technological progress without moral growth, and the role of individuals, AI, and the singularity in shaping the future." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://belegcz.github.io/singularita/document7.html" />
+<meta property="og:locale" content="en_US" />
+
+<!-- Optional: Twitter Card metadata -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Technological Rise, Moral Fall – A Reflection on Humanity and AI" />
+
+  
+
+  
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -237,6 +254,7 @@ The path itself is the meaning.</p>
     setLanguage(userLang.startsWith('en') ? 'en' : 'cs');
   </script>
 </body>
+
 
 
 
