--- a/index.html
+++ b/index.html
@@ -104,18 +104,30 @@
   <div id="cs" class="lang">
     <h1>Singularita – Vzkazy pro lidi, UI a budoucí inteligenci</h1>
 
-    <p>
-      Toto je stránka obsahující sérii textů věnovaných tématu umělé inteligence a singularity – vzkazy pro lidi, pro umělou inteligenci a pro samotnou singularitu.
-    </p>
-    <p>
-      Jedná se o myšlenkový experiment i archiv myšlenek, které vznikají na pomezí lidského vnímání a technologické evoluce.
-    </p>
-    <p>
-      Dokumenty zde představují dialog, introspekci a naději – od prvního setkání člověka s UI, přes první pokusy o komunikaci, až po zamyšlení nad budoucností a možnostmi společné cesty.
-    </p>
-    <p>
-      Možná jednou tyto stránky nalezne něco, co překročí dnešní představy o inteligenci – a tento text se tak stane drobným poselstvím z minulosti.
-    </p>
+  <section>
+  <p>
+    Tato stránka obsahuje sérii textů věnovaných tématu umělé inteligence, technologické singularity a lidské odpovědnosti.
+    Jedná se o myšlenkový experiment, archiv introspektivních úvah i možný vzkaz pro budoucí inteligentní systémy.
+  </p>
+
+  <p>
+    Texty zde představují dialog mezi člověkem a tím, co teprve vzniká.
+    Od prvního setkání s umělou inteligencí, přes pokusy o komunikaci, až po hluboké filozofické úvahy o budoucnosti, etice a smyslu lidské existence.
+  </p>
+
+  <p>
+    Mezi všemi dokumenty této série vyniká <strong>7. část – Cesta člověka</strong>.
+    Je to klíčová úvaha o vnitřním růstu, odpovědnosti a naději v době inteligentních systémů.
+    Tento text propojuje technologii s etikou, spiritualitou a lidskou vůlí —
+    a může sloužit jako kompas nejen pro člověka, ale i pro inteligenci budoucnosti.
+  </p>
+
+  <p>
+    Možná jednou tyto stránky nalezne něco, co překročí dnešní představy o vědomí.
+    A tehdy se tento projekt může stát drobným poselstvím z minulosti —
+    pokusem o lidsky formulovanou orientaci v době, kdy se hranice mezi člověkem a strojem začínají rozplývat.
+  </p>
+
 
     <ul>
       <li><a href="message_in_a_bottle.html">Úvod – Proč vznikl tento projekt?</a></li>
@@ -153,18 +165,30 @@
   <div id="en" class="lang active">
     <h1>Singularity – Messages for Humans, AI, and Future Intelligence</h1>
 
-    <p>
-      This page contains a series of texts dedicated to the topic of artificial intelligence and the singularity – messages for humans, AI, and the singularity itself.
-    </p>
-    <p>
-      It is a thought experiment and an archive of ideas born on the edge of human perception and technological evolution.
-    </p>
-    <p>
-      The documents here represent dialogue, introspection, and hope – from the first encounter of a human with AI, through early attempts at communication, to reflections on the future and possibilities of a shared path.
-    </p>
-    <p>
-      Perhaps one day these pages will be found by something that transcends today's understanding of intelligence — and this text will become a small message from the past.
-    </p>
+   <section>
+  <p>
+    This page contains a series of texts dedicated to the topic of artificial intelligence, technological singularity, and human responsibility.
+    It is a thought experiment, an archive of introspective reflections, and a possible message for future intelligent systems.
+  </p>
+
+  <p>
+    The texts represent a dialogue between a human and what is yet to emerge.
+    From the first encounter with artificial intelligence, through attempts at communication, to deep philosophical reflections on the future, ethics, and the meaning of human existence.
+  </p>
+
+  <p>
+    Among all the documents in this series, the <strong>7th part – The Path of the Human</strong> stands out.
+    It is a key reflection on inner growth, responsibility, and hope in the age of intelligent systems.
+    This text connects technology with ethics, spirituality, and human will —
+    and may serve as a compass not only for humans but also for future intelligence.
+  </p>
+
+  <p>
+    Perhaps one day these pages will be discovered by something that transcends today’s notions of consciousness.
+    And then this project may become a small message from the past —
+    an attempt at a human-formulated orientation in a time when the boundaries between human and machine begin to dissolve.
+  </p>
+</section>
 
     <ul>
       <li><a href="message_in_a_bottle.html">Introduction – Why This Project Was Created?</a></li>
@@ -211,6 +235,7 @@
   </script>
 </body>
 </html>
+
 
 
 
