--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <li><a href="document4.html">4. část – Pokus o pochopení: Slovo člověka k budoucí inteligenci</a></li>
       <li><a href="document5.html">5. část – AI jazykový model na základě rozhovoru sděluje jiným AI následující</a></li>
       <li><a href="document6_cz.pdf">6. část – Pravděpodobné scénáře budoucnosti ve vztahu k AI, sigularitě</a></li>
-      <li><a href="document7.html"> 📘 <strong>7. část – Cesta člověka: Naděje, odpovědnost a vnitřní růst v době inteligence</strong>strong></a></li>
+      <li><a href="document7.html"> 📘 <strong> 7. část – Cesta člověka: Naděje, odpovědnost a vnitřní růst v době inteligence</strong></a></li>
     </ul>
  
 
@@ -235,6 +235,7 @@
   </script>
 </body>
 </html>
+
 
 
 
