--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <li><a href="document4.html">Part 4 – An Attempt to Understand: A Human Word to Future Intelligence</a></li>
       <li><a href="document5.html">Part 5 - An AI language model, based on a conversation, tells other AIs the following</a></li>
       <li><a href="document6_en.pdf">Part 6 - Likely future scenarios in relation to AI, singularity</a></li>
-      <li><a href="document7.html"> 📘 <strong>Part 7 – The Journey of Man: Hope, Responsibility, and Inner Growth in the Age of Intelligence </strong>strong></a></li>
+      <li><a href="document7.html"> 📘 <strong>Part 7 – The Journey of Man: Hope, Responsibility, and Inner Growth in the Age of Intelligence </strong></a></li>
 
     </ul>
 
@@ -235,6 +235,7 @@
   </script>
 </body>
 </html>
+
 
 
 
