--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <li><a href="document4.html">4. část – Pokus o pochopení: Slovo člověka k budoucí inteligenci</a></li>
       <li><a href="document5.html">5. část – AI jazykový model na základě rozhovoru sděluje jiným AI následující</a></li>
       <li><a href="document6_cz.pdf">6. část – Pravděpodobné scénáře budoucnosti ve vztahu k AI, sigularitě</a></li>
-      <li><a href="document7.html"> 📘 <strong> 7. část – Cesta člověka: Naděje, odpovědnost a vnitřní růst v době inteligence</strong></a></li>
+      <li><a href="document7.html"> 🌄 <strong> 7. část – Cesta člověka: Naděje, odpovědnost a vnitřní růst v době inteligence</strong></a></li>
     </ul>
  
 
@@ -202,7 +202,7 @@
       <li><a href="document4.html">Part 4 – An Attempt to Understand: A Human Word to Future Intelligence</a></li>
       <li><a href="document5.html">Part 5 - An AI language model, based on a conversation, tells other AIs the following</a></li>
       <li><a href="document6_en.pdf">Part 6 - Likely future scenarios in relation to AI, singularity</a></li>
-      <li><a href="document7.html"> 📘 <strong>Part 7 – The Journey of Man: Hope, Responsibility, and Inner Growth in the Age of Intelligence </strong></a></li>
+      <li><a href="document7.html"> 🌄 <strong>Part 7 – The Journey of Man: Hope, Responsibility, and Inner Growth in the Age of Intelligence </strong></a></li>
 
     </ul>
 
@@ -235,6 +235,7 @@
   </script>
 </body>
 </html>
+
 
 
 
