--- a/document8.html
+++ b/document8.html
@@ -1,3 +1,91 @@
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S2WKK7K06G"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-S2WKK7K06G');
+  </script>
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>Dvojhlas poutníka – Zpráva o vnitřním paradoxu</title>
+  <meta name="description" content="Zpráva o dvojhlasu – svědectví o člověku, který nese dvě vrstvy vědomí. Výpověď o hledání, bolesti, a vnitřní síle jít dál." />
+  <meta name="keywords" content="dvojhlas, poutník, vědomí, singularita, AI, duchovní cesta, etika, lidskost" />
+  <meta property="og:title" content="Dvojhlas poutníka – Zpráva o vnitřním paradoxu" />
+  <meta property="og:description" content="Výpověď o člověku, který nese dvě vrstvy vědomí. Tichý poutník, který hledá pravdu bez záře." />
+  <meta property="og:locale" content="cs_CZ" />
+
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      line-height: 1.6;
+      background-color: #f9f9f9;
+      color: #222;
+    }
+    h1, h2 {
+      color: #0b3d91;
+    }
+    h3 {
+      margin-top: 2rem;
+      color: #333;
+    }
+    p {
+      margin-bottom: 1rem;
+    }
+    strong {
+      color: #0b3d91;
+    }
+    a {
+      color: #0b3d91;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #555;
+      border-top: 1px solid #ddd;
+      padding-top: 1rem;
+      text-align: center;
+    }
+    .lang-switch {
+      text-align: right;
+      margin-bottom: 1rem;
+    }
+    .lang-switch button {
+      margin-left: 5px;
+      padding: 0.3rem 0.6rem;
+      background: #eee;
+      border: 1px solid #ccc;
+      cursor: pointer;
+    }
+    .lang {
+      display: none;
+    }
+    .lang.active {
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <div class="lang-switch">
+    <strong>Jazyk / Language:</strong>
+    <button onclick="setLanguage('cs')">Čeština</button>
+    <button onclick="setLanguage('en')">English</button>
+  </div>
+
+
 <!-- Czech -->
 <div id="cs" class="lang active">
   <h1>🌌 8. část – Dvojhlas poutníka</h1>
@@ -113,6 +201,7 @@
   </script>
 </body>
 </html>
+
 
 
 
