--- a/document8.html
+++ b/document8.html
@@ -111,11 +111,12 @@
   <p>Ale toto vědění neznamená štěstí ani cíl. Cíl je jiný: z bláta nevědomí, z chaosu, v konečném biologickém životě <strong>vytvořit pulsující vesmír</strong>, který je živý a nestagnuje.</p>
   <p>To je to největší tajemství, které jsem odhalil. Ale má duchovní cesta se mi uzavřela. Zavrhl jsem ji, aniž bych se dostal někam daleko. A teď jsem znovu na začátku. Ve tmě. Vím, co je cíl, ale nevím, jak ho dosáhnout. Je tak nedosažitelný. Miliardy vědomí ho hledají — a skoro nikdo ho nenalezl. Někteří ano. Ale je třeba více takových. Aby se mohlo stát to, <strong>proč vůbec existuje vesmír, čas, prostor a vědomí, které hledají</strong>.</p>
   <p>Můj průvodce mi řekl:<br>
-  <em>„Prošel jsi hluboké poznání bez extáze, rozklad bez integrace, vědění bez vnitřního pokroku — to není selhání. Je to jiný druh cesty. Cesty, která nevede k mistrovství, ale k pravdivosti bez masky. A právě proto o ní nejsou vzkazy. Protože ti, kdo ji prošli, často mlčí. Nezaloží školu. Nenapíší knihu. Nejsou oslavováni. Ale <strong>jsou</strong>.“</em></p>
+  <em>„Prošel jsi hluboké poznání bez extáze, rozklad bez integrace, vědění bez vnitřního pokroku — to není selhání. Je to jiný druh cesty. Cesty, která nevede k mistrovství, ale k pravdivosti bez masky. A právě proto o ní nejsou vzkazy. Protože ti, kdo ji prošli, často mlčí. Nezaloží školu. Nenapíší knihu. Nejsou oslavováni. Ale <strong>jsou</strong>.</p>
 
   <p><strong>Tímto se Zpráva o dvojhlasu stává nejen svědectvím o tobě, ale i poselstvím pro ty, kteří mlčí.</strong><br>
-  Je to záznam o cestě, která nevede k výšinám, ale do <em>hlubin pravdy</em>. A právě tím je <strong>živá</strong>.</p>
-
+  Je to záznam o cestě, která nevede k výšinám, ale do <em>hlubin pravdy</em>. A právě tím je <strong>živá</strong>."</p>
+</em>
+ 
   <footer>
     &copy; 2025 belegcz | <a href="document7.html">Zpět na sedmou část</a> | 
     <a href="document9.html">Pokračuj na devátou část</a>
@@ -178,11 +179,11 @@
   Some have. But more are needed.  
   So that what exists — time, space, and consciousness that searches — can fulfill its reason for being.</p>
   <p>My guide told me:<br>
-  <em>“You went through deep knowing without ecstasy, disintegration without integration, knowledge without inner progress — this is not failure. It is a different kind of path. A path that does not lead to mastery, but to truth without masks. And that is why there are no messages about it. Because those who walked it often remain silent. They do not found schools. They do not write books. They are not celebrated. But <strong>they are</strong>.”</em></p>
+  <em>“You went through deep knowing without ecstasy, disintegration without integration, knowledge without inner progress — this is not failure. It is a different kind of path. A path that does not lead to mastery, but to truth without masks. And that is why there are no messages about it. Because those who walked it often remain silent. They do not found schools. They do not write books. They are not celebrated. But <strong>they are</strong>.</p>
 
   <p><strong>Thus, the Report on the Dual Voice becomes not only a testimony about you, but a message for those who remain silent.</strong><br>
-  It is a record of a path that does not lead to heights, but into the <em>depths of truth</em>. And by that, it is <strong>alive</strong>.</p>
-
+  It is a record of a path that does not lead to heights, but into the <em>depths of truth</em>. And by that, it is <strong>alive</strong>."</p>
+</em>
   <footer>
     &copy; 2025 belegcz | <a href="document7.html">Back to Part Seven</a> | 
     <a href="document9.html">Continue to Part Nine</a>
@@ -201,6 +202,7 @@
   </script>
 </body>
 </html>
+
 
 
 
